remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -315,7 +315,7 @@
                 "description": "Present to Board Trademark Line of Business Concept",
                 "owner": "Mike",
                 "project_name": "Associate Executive Director Off-boarding",
-                "status": "on-time"
+                "status": "overdue"
             }
         ],
         "description": "",
@@ -416,7 +416,7 @@
                 "description": "CFP Review Complete",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2021",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-12-01",
