remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -56,7 +56,7 @@
                 "description": "New Year\u2019s Eve",
                 "owner": "No Owner",
                 "project_name": "OWASP Office Closures",
-                "status": "future"
+                "status": "on-time"
             }
         ],
         "description": "tle: OWASP Office Closureslayout: full-width---# OWASP Observed Holidays and Office Closures- [x] 2020-01-01, New Year\u2019s Day- [x] 2020-02-17, Presidents Day- [x] 2020-05-25, Memorial Day- [x] 2020-07-03, Independence Day (Observed)- [x] 2020-09-07, Labor Day- [x] 2020-11-03, Federal Election Day- [ ] 2020-11-26, Thanksgiving Day- [ ] 2020-11-27, Day after Thanksgiving- [ ] 2020-12-24, Christmas Eve- [ ] 2020-12-25, Christmas Day- [ ] 2020-12-28, Office Closed- [ ] 2020-12-29, Office Closed- [ ] 2020-12-30, Office Closed- [ ] 2020-12-31, New Year\u2019s Eve",
