--- a/_data/projects.json
+++ b/_data/projects.json
@@ -49,7 +49,7 @@
                 "description": "Office Closed",
                 "owner": "No Owner",
                 "project_name": "OWASP Office Closures",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-12-31",
