remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -7,7 +7,7 @@
                 "description": "Presidents Day",
                 "owner": "No Owner",
                 "project_name": "OWASP Office Closures",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2021-05-28",
