remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -21,7 +21,7 @@
                 "description": "Memorial Day",
                 "owner": "No Owner",
                 "project_name": "OWASP Office Closures",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2021-07-05",
