remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -28,7 +28,7 @@
                 "description": "Independence Day (Observed)",
                 "owner": "No Owner",
                 "project_name": "OWASP Office Closures",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2021-09-03",
