remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -42,7 +42,7 @@
                 "description": "Labor Day",
                 "owner": "No Owner",
                 "project_name": "OWASP Office Closures",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2021-11-11",
